# xtea-benchmarks

./: decrypt.cpp  decrypt.h  encrypt.cpp  encrypt.h  key.cpp  key.h  main.cpp  meson.build
